--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,8 @@ body{
         margin: 50px 140px;
         background-size: 100% 100%, cover;
         background-position: center;
+        padding-bottom: 80px;
+        padding-top: 70px;
 }
 
 .header-small{
@@ -92,7 +94,7 @@ body{
 
 .section-gap-second{
     margin: 120px 140px;
-    padding: 126px 0 142px 40px;
+    padding: 126px 0 142px 10px;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -136,4 +138,53 @@ body{
 .section-img-midnight{
     width: 319.83px;
     height: 464.662px;
+}
+
+/* Place Details */
+.place-info{
+    margin: 120px 140px;
+        background: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+        border-radius: 16px;
+        width: 82.50%;
+        height: 600px;
+        text-align: center;
+        padding-top: 100px;
+        /* margin: 50px 140px;
+        background-size: 100% 100%, cover;
+        background-position: center; */
+}
+
+.place-red{
+    color: #F00;
+    text-align: center;
+    font-family: Inter;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 56px; /* 175% */
+    text-transform: capitalize;
+}
+.place-text{
+    color: #070211;
+    font-family: Inter;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 56px;
+    text-transform: capitalize;
+}
+.btn-section{
+    display: inline-flex;
+    margin-top: 48px;
+    padding: 16px 32px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border: 0px;
+    border-radius: 8px;
+    background: #F00;
+    color: #FFF;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: normal;
 }
