--- a/styles/style.css
+++ b/styles/style.css
@@ -298,3 +298,57 @@ body{
     position: absolute;
     padding: 76.97px 68px 50.31px 210px;
 }
+
+/* Gifts Section */
+.section-gifts{
+    margin: 120px 140px;
+}
+.space-gift{
+    width: 896px;
+    padding-bottom: 48px;
+}
+.image-one{
+    display: flex;
+    width: 1524px;
+    justify-content: space-between;
+    padding-bottom: 100px;
+}
+.image-one:hover img:hover, .image-two:hover img:hover{
+    opacity: 0.75;
+}
+
+.image-two{
+    display: flex;
+    width: 1524px;
+    justify-content: space-between;
+}
+
+/* newsletter section */
+.newsletter{
+    text-align: center;
+    border-radius: 16px;
+    background: rgba(255, 0, 0, 0.05);
+}
+.email{
+    width: 150px;
+    height: 150px;
+    padding-bottom: 40px;
+}
+.btn-input{
+    border-radius: 50px;
+    background: #FFF;
+    width: 648px;
+    height: 72px;
+}
+.extra-news{
+    padding-bottom: 48px;
+    width: 896px;;
+}
+.btn-input[placeholder]{
+    color: rgba(7, 2, 17, 0.30);
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 400;
+    border: 0px ;
+    
+}
