--- a/styles/style.css
+++ b/styles/style.css
@@ -328,6 +328,7 @@ body{
     text-align: center;
     border-radius: 16px;
     background: rgba(255, 0, 0, 0.05);
+    margin-top: 200px;
 }
 .email{
     width: 150px;
@@ -350,5 +351,69 @@ body{
     font-size: 18px;
     font-weight: 400;
     border: 0px ;
-    
+    padding-left: 30px;
+    position: relative;
+}
+.btn-design{
+    width: 210px;
+    height: 74px;
+    border: 0px;
+    border-radius: 0px 50px 50px 0px;
+    background: #F00;
+    color: #FFF;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 600;
+    position: absolute;
+    right: 28.5%;
+    top: -1px;
+}
+.input-btn{
+    position: relative;
+    margin-bottom: 200px;
+}
+
+/* Foooter */
+.footer{
+    background: #070211;
+    width: 100%;
+    height: 609px;
+}
+.footer-style{
+    margin: 120px 140px;
+    padding-top: 120px;
+}
+.address{
+    color: #FFF;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 40px; /* 166.667% */
+}
+.phone, .website{
+    display: flex;
+    gap: 16px;
+    align-items: center;
+    padding-right: 135px;
+}
+.inline{
+    display: inline;
+}
+.contact-container{
+    display: flex;
+    justify-content: space-between;
+}
+.padding{
+    width: 60%;
+}
+.hrule{
+    background: rgba(255, 255, 255, 0.15);
+    margin: 50px 0 50px 0;
+}
+.social-media{
+    display: flex;
+    gap: 24px;
+    justify-content: center;
 }
