--- a/styles/style.css
+++ b/styles/style.css
@@ -334,6 +334,8 @@ body{
     border-radius: 16px;
     background: rgba(255, 0, 0, 0.05);
     margin-top: 200px;
+    padding-top: 80px;
+    padding-bottom: 80px;
 }
 .email{
     width: 150px;
@@ -376,7 +378,7 @@ body{
 }
 .input-btn{
     position: relative;
-    margin-bottom: 200px;
+    /* margin-bottom: 200px; */
 }
 
 /* Foooter */
